tests/baselines/reference/stringLiteralsErrors.errors.txt
==== tests/cases/compiler/stringLiteralsErrors.ts (17 errors) ====
    // Srtings missing line terminator
    var es1 = "line 1
                     
    ";
    
!!! error TS1002: Missing close quote character.
      
    var es2 = 'line 1
    
!!! error TS1002: Missing close quote character.
                     
    ';
    
!!! error TS1002: Missing close quote character.
      
    
    
!!! error TS1002: Missing close quote character.
    // Space after backslash
    var es3 = 'line 1\ 
                       
    ';
    
!!! error TS1002: Missing close quote character.
      
    var es4 = 'line 1\ 
    
!!! error TS1002: Missing close quote character.
                       
    ';
    
!!! error TS1002: Missing close quote character.
      
    
    
!!! error TS1002: Missing close quote character.
    // Unterminated strings
    var es5 = "unterminated
                           
    var es6 = 'unterminated
    
!!! error TS1002: Missing close quote character.
                           
    
    
!!! error TS1002: Missing close quote character.
    // wrong terminator
    var es7 = "unterminated '
                             
    var es8 = 'unterminated "
    
!!! error TS1002: Missing close quote character.
                             
    
    
!!! error TS1002: Missing close quote character.
    // wrong unicode sequences
    var es9 = "\u00";
               ~~~~
!!! error TS1000: Unrecognized escape sequence.
    var es10 = "\u00GG";
                ~~~~
!!! error TS1000: Unrecognized escape sequence.
    var es11 = "\x0";
                ~~~
!!! error TS1000: Unrecognized escape sequence.
    var es12 = "\xmm";
                ~~
!!! error TS1000: Unrecognized escape sequence.
    
    // End of file
    var es13 = " 
                 
!!! error TS1002: Missing close quote character.